dropdown z-index fix

--- a/src/common/assets/styles/global/global.scss
+++ b/src/common/assets/styles/global/global.scss
@@ -94,3 +94,10 @@
 .r-small-caps {
     font-variant: small-caps;
 }
+
+/*
+ * Helper classes.
+ */
+.r-z-index-toplevel {
+    @apply z-[9999] #{!important};
+}
